# bakaos

./: .gitignore  Cargo.baremetal.toml  Cargo.toml  InspectCode.sh  LICENSE  Makefile  README.md  README.zh-cn.md  SetupLA64Workspace.sh  SetupRV64Workspace.sh  prepare-img.py  rust-toolchain.toml
BakaEx/: .gitignore  Cargo.toml  Makefile  build-hello.sh  hello-la  hello-rv  rust-toolchain.toml
BakaEx/.cargo/: config.toml
BakaEx/kernel/: Cargo.toml
BakaEx/kernel/src/: kernel.rs  main.rs  syscalls.rs  tty.rs
BakaEx/libraries/abstractions/src/: operations.rs
BakaEx/libraries/allocation-abstractions/: Cargo.toml
BakaEx/libraries/allocation/src/: lib.rs
BakaEx/libraries/constants/: Cargo.toml  build.rs
BakaEx/libraries/filesystem-abstractions/: Cargo.toml
BakaEx/libraries/kernel-abstractions/: Cargo.toml
BakaEx/libraries/memory-space/: Cargo.toml
BakaEx/libraries/mmap-abstractions/: Cargo.toml
BakaEx/libraries/mmu-abstractions/: Cargo.toml
BakaEx/libraries/mmu-native/: Cargo.toml
BakaEx/libraries/platform-abstractions/: Cargo.toml
BakaEx/libraries/platform-specific/: Cargo.toml
BakaEx/libraries/task/: Cargo.toml
BakaEx/libraries/task-abstractions/: Cargo.toml
BakaEx/libraries/threading/: Cargo.toml
BakaEx/libraries/trap-abstractions/: Cargo.toml
BakaEx/syscalls/: Cargo.toml
BakaEx/syscalls/src/: lib.rs  sys_mmap.rs  sys_nanosleep.rs  sys_sched_yield.rs  sys_uname.rs  sys_write.rs
BakaEx/test-utilities/: Cargo.toml
BakaEx/test-utilities/src/: fs.rs  kernel.rs  lib.rs  memory.rs  task.rs
crates/: Cargo.toml
crates/abstractions/: Cargo.toml
crates/abstractions/src/: lib.rs  operations.rs
crates/address/: Cargo.toml
crates/address/src/: address.rs  address_range.rs  lib.rs  page_num.rs  page_num_range.rs  physical_address.rs  physical_address_range.rs  physical_page_num.rs  physical_page_num_range.rs  virtual_address.rs  virtual_address_range.rs  virtual_page_num.rs  virtual_page_num_range.rs
crates/allocation/: Cargo.toml
crates/allocation/src/: frame.rs  lib.rs
crates/constants/: .gitignore  Cargo.toml  build.rs
crates/constants/src/: errno.rs  lib.rs
crates/drivers/: Cargo.toml  build.rs
crates/drivers/src/: block.rs  lib.rs  machine.rs  rtc.rs  virt.rs
crates/filesystem/: Cargo.toml
crates/filesystem-abstractions/: Cargo.toml
crates/filesystem-abstractions/src/: caching.rs  file.rs  inode.rs  lib.rs  mount.rs  pipe.rs  special_inode.rs  stdio.rs  tree.rs
crates/filesystem/src/: another_ext4_impl.rs  ext4_impl.rs  fatfs_impl.rs  inode.rs  lib.rs  lwext4_rust_impl.rs  lwext4rs_impl.rs
crates/global_heap/: Cargo.toml
crates/global_heap/src/: lib.rs
crates/network/: Cargo.toml
crates/network-abstractions/: Cargo.toml
crates/network-abstractions/src/: address.rs  buffer.rs  device.rs  lib.rs  socket.rs
crates/network/src/: lib.rs  manager.rs  socket.rs
crates/page_table/: Cargo.toml
crates/page_table/src/: flush_handle.rs  lib.rs  pt.rs  pte.rs
crates/paging/: Cargo.toml
crates/paging/src/: lib.rs  memory.rs  memory_map.rs  page_table.rs
crates/path/: Cargo.toml
crates/path/src/: path.rs
crates/platform-abstractions/: Cargo.toml
crates/platform-abstractions/src/: interrupts.rs  lib.rs  panic.rs  syscalls.rs
crates/platform-specific/: Cargo.toml  build.rs
crates/platform-specific/src/: context.rs  lib.rs  serial.rs  syscalls.rs
crates/rng/: Cargo.toml
crates/rng/src/: lib.rs
crates/source-generation/src/: context.rs  error.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs  status.rs  structs.rs  tid.rs  uesr_task.rs
crates/template/: Cargo.toml
crates/threading/: Cargo.toml
crates/threading/src/: executor.rs  futures.rs  lib.rs
crates/timing/: Cargo.toml
crates/timing/src/: lib.rs  timeval.rs
crates/unwinding/: Cargo.toml
crates/unwinding/src/: lib.rs
docs/bakaos-simple-kernel/: .gitignore  Cargo.toml  Makefile  hello  hello.S  rust-toolchain.toml
docs/bakaos-simple-kernel/.cargo/: config.toml
docs/bakaos-simple-kernel/lds/: la64.ld  rv64.ld
docs/bakaos-simple-kernel/src/: heap_allocator.rs  main.rs
kernel/: .gitignore  Cargo.toml  Makefile  build.rs  unwinder.py
kernel/.cargo/: config.toml
kernel/dependencies/: linux-syscalls  source-generation  syscalls  test-utilities
kernel/lds/: 2k1000-loongarch64.ld  la64.ld  rv64.ld  symbol.ld  vf2-riscv64.ld  virt-loongarch64.ld  virt-riscv64.ld  virt.ld
kernel/src/: ci_helper.rs  dmesg.rs  kernel.rs  logging.rs  main.rs  memory.rs  panic_handling.rs  processor.rs  scheduling.rs  serial.rs  shared_memory.rs  statistics.rs  syscalls.rs  test_script.sh  timing.rs  trap.rs  tty.rs
kernel/src/firmwares/: console.rs
kernel/src/memory/: global_heap.rs  mod.rs
kernel/src/platform/: machine.rs  mod.rs  vf2.rs  virt.rs
kernel/src/scripts/: online.sh  test_script.sh
kernel/src/syscalls/: file.rs  file_async.rs  futex_async.rs  io_multiplexing.rs  mod.rs  shm.rs  syscall_id.rs  system.rs  task.rs  task_async.rs
kernel/src/system/: mod.rs
kernel/src/timing/: mod.rs
kernel/src/trap/: kernel.rs  mod.rs  user.rs
libraries/allocation/: Cargo.toml
libraries/allocation/src/: lib.rs
libraries/constants/: Cargo.toml  build.rs
libraries/constants/src/: errno.rs  lib.rs
libraries/filesystem-abstractions/: Cargo.toml
libraries/filesystem-abstractions/src/: file.rs  inode.rs  lib.rs  tree.rs
libraries/kernel-abstractions/: Cargo.toml
libraries/kernel-abstractions/src/: lib.rs
libraries/linux-loader/: Cargo.toml
libraries/linux-loader/src/: auxv.rs  builder.rs  elf.rs  lib.rs  loader.rs  process.rs  shebang.rs  stack.rs
libraries/linux-task-abstractions/: Cargo.toml
libraries/linux-task-abstractions/src/: lib.rs
libraries/memory-space/: Cargo.toml
libraries/memory-space/src/: auxv.rs  builder.rs  lib.rs  memory.rs
libraries/mmu-abstractions/: Cargo.toml
libraries/mmu-abstractions/src/: flags.rs  lib.rs
test-utilities/: Cargo.toml
test-utilities/src/: fs.rs  kernel.rs  lib.rs  logging.rs  memory.rs  task.rs
test-utilities/src/allocation/: contiguous.rs  mod.rs  segment.rs
(+344 files in other folders)
