[workspace]
resolver = "2"
members = [
    "linux-syscalls",
    "test-utilities",
    "source-generation",
    "libraries/timing",
    "libraries/address",
    "libraries/path",
    "libraries/threading",
    "libraries/constants",
    "libraries/unwinding",
    "libraries/allocation",
    "libraries/memory-space",
    "libraries/mmu-native",
    "libraries/task",
    "libraries/abstractions",
    "libraries/kernel-abstractions",
    "libraries/filesystem-abstractions",
    "libraries/platform-specific",
    "libraries/allocation-abstractions",
    "libraries/mmu-abstractions",
    "libraries/memory-space-abstractions",
    "libraries/mmap-abstractions",
    "libraries/task-abstractions",
    "libraries/trap-abstractions",
]

exclude = [
    "kernel"
]
