[workspace]
resolver = "2"
members = [
    "drivers",
    "filesystem",
    "filesystem-abstractions",
    "timing",
    "address",
    "path",
    "threading",
    "constants",
    "allocation",
    "abstractions",
    "tasks",
    "paging",
    "unwinding",
    "rng",
    "platform-specific",
    "platform-abstractions",
]

exclude = [
    "template",
]
