[package]
name = "bakaos-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
hermit-sync = "0.1.6"
linux-syscalls = { path = "dependencies/linux-syscalls" }
timing = { path = "dependencies/libraries/timing" }
kernel-abstractions = { path = "dependencies/libraries/kernel-abstractions" }
trap-abstractions = { path = "dependencies/libraries/trap-abstractions" }
platform-abstractions = { path = "dependencies/libraries/platform-abstractions" }
platform-specific = { path = "dependencies/libraries/platform-specific" }
linux-loader = { path = "dependencies/libraries/linux-loader" }
allocation = { path = "dependencies/libraries/allocation" }
allocation-abstractions = { path = "dependencies/libraries/allocation-abstractions" }
filesystem-abstractions = { path = "dependencies/libraries/filesystem-abstractions" }
mmu-abstractions = { path = "dependencies/libraries/mmu-abstractions" }
task-abstractions = { path = "dependencies/libraries/task-abstractions" }
linux-task-abstractions = { path = "dependencies/libraries/linux-task-abstractions" }
linux-task = { path = "dependencies/libraries/linux-task" }
mmu-native = { path = "dependencies/libraries/mmu-native" }
threading = { path = "dependencies/libraries/threading" }
address = { path = "dependencies/libraries/address" }
abstractions = { path = "dependencies/libraries/abstractions" }
global_heap = { path = "dependencies/libraries/global_heap" }
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }

[features]
default = ["virt"]
virt = []

[profile.release]
debug = true
opt-level = 3
overflow-checks = false
panic = "abort"

[workspace]
resolver = "2"

exclude = [
    "dependencies/source-generation",
    "dependencies/test-utilities",
]
