[package]
name = "test-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.5"
env_logger = "0.11"
hermit-sync = "0.1.6"
linux-task-abstractions = { path = "../libraries/linux-task-abstractions", default-features = false }
timing = { path = "../libraries/timing", default-features = false }
abstractions = { path = "../libraries/abstractions", default-features = false }
address = { path = "../libraries/address", default-features = false }
constants = { path = "../libraries/constants", default-features = false }
kernel-abstractions = { path = "../libraries/kernel-abstractions", default-features = false }
filesystem-abstractions = { path = "../libraries/filesystem-abstractions", default-features = false }
allocation-abstractions = { path = "../libraries/allocation-abstractions", default-features = false }
mmu-abstractions = { path = "../libraries/mmu-abstractions" }
memory-space = { path = "../libraries/memory-space", default-features = false }
task-abstractions = { path = "../libraries/task-abstractions", default-features = false }
trap-abstractions = { path = "../libraries/trap-abstractions", default-features = false }
allocation = { path = "../libraries/allocation", default-features = false }
platform-specific = { path = "../libraries/platform-specific", default-features = false }
libc = "0.2.174"

[features]
default = ["test_log"]
test_log = []
