[package]
name = "bakaos-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
hermit-sync = "0.1.6"
syscalls = { path = "../syscalls" }
timing = { path = "../libraries/timing" }
kernel-abstractions = { path = "../libraries/kernel-abstractions" }
trap-abstractions = { path = "../libraries/trap-abstractions" }
platform-abstractions = { path = "../libraries/platform-abstractions" }
platform-specific = { path = "../libraries/platform-specific" }
memory-space = { path = "../libraries/memory-space" }
allocation = { path = "../libraries/allocation" }
allocation-abstractions = { path = "../libraries/allocation-abstractions" }
filesystem-abstractions = { path = "../libraries/filesystem-abstractions" }
mmu-abstractions = { path = "../libraries/mmu-abstractions" }
task-abstractions = { path = "../libraries/task-abstractions" }
task = { path = "../libraries/task" }
mmu-native = { path = "../libraries/mmu-native" }
threading = { path = "../libraries/threading" }
address = { path = "../libraries/address" }
abstractions = { path = "../libraries/abstractions" }
global_heap = { path = "../libraries/global_heap" }
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }

[features]
default = ["virt"]
virt = []
