[package]
name = "test-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hermit-sync = "0.1.6"
abstractions = { path = "../libraries/abstractions", default-features = false }
address = { path = "../libraries/address", default-features = false }
constants = { path = "../libraries/constants", default-features = false }
kernel-abstractions = { path = "../libraries/kernel-abstractions", default-features = false }
filesystem-abstractions = { path = "../libraries/filesystem-abstractions", default-features = false }
allocation-abstractions = { path = "../libraries/allocation-abstractions", default-features = false }
mmu-abstractions = { path = "../libraries/mmu-abstractions" }
memory-space-abstractions = { path = "../libraries/memory-space-abstractions", default-features = false }
task-abstractions = { path = "../libraries/task-abstractions", default-features = false }
trap-abstractions = { path = "../libraries/trap-abstractions", default-features = false }
allocation = { path = "../libraries/allocation", default-features = false }
libc = "0.2.174"

[features]
default = ["std"]
std = []
