[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtio-drivers = "0.7.5"
allocation = { path = "../allocation", default-features = false }
constants = { path = "../constants", default-features = false }
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
log = "0.4.22"
visionfive2-sd = { git = "https://github.com/os-module/visionfive2-sd" }
hermit-sync = "0.1.6"
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }

[features]
default = ["std"]
std = []
no_std = []
