[package]
name = "filesystem-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
downcast-rs = { version = "1.2.1", default-features = false }
timing = { path = "../timing", default-features = false }
path = { path = "../path", default-features = false }

[features]
default = ["std"]
std = []
no_std = []
