[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { git = "https://github.com/neuq-rcore/rust-fatfs.git", default-features = false, features = ["lfn", "alloc", "unicode"] }
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }
drivers = { path = "../drivers", default-features = false }
path = { path = "../path", default-features = false  }
log = "0.4.22"
hermit-sync = "0.1.6"

[features]
default = ["std"]
std = []
no_std = []
