[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = { git = "https://github.com/neuq-rcore/rust-fatfs.git", default-features = false, features = ["lfn", "alloc", "unicode"] }
ext4_rs = { git = "https://github.com/neuq-rcore/ext4_rs", rev = "02ca6881a15e770fb0ce09cc23410bda74d81cdd", default-features = false }
# lwext4-rs = { git = "https://github.com/os-module/lwext4.git", default-features = false }
# embedded-io = "0.6.1"
timing = { path = "../timing", default-features = false }
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }
drivers = { path = "../drivers", default-features = false }
path = { path = "../path", default-features = false  }
log = "0.4.22"
hermit-sync = "0.1.6"

[target.'cfg(any(target_arch = "riscv64", target_arch = "loongarch64"))'.dependencies]
lwext4_rust = { git = "https://github.com/neuq-rcore/lwext4_rust.git", rev = "9faef422a38ca7ea68b71d7107f5631838eed781", features = ["shutfuckup"] }

[features]
default = ["no_std"]
std = []
no_std = []
