[package]
name = "network-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
zerocopy = { version = "0.8.25", features = ["derive"] }

[dependencies.smoltcp]
version = "0.9.1"
optional = true
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp",
]

[features]
default = ["no_std"]
std = []
no_std = []
