[package]
name = "paging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions" }
bitflags = "2.6.0"

[features]
default = ["std"]
std = []
no_std = []
