[package]
name = "platform-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-specific = { path = "../platform-specific" }
unwinding = { path = "../unwinding" }
tasks = { path = "../tasks", features = ["no_std"] }
constants =  { path = "../constants", default-features = false }
log = "0.4"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.12"
sbi-rt = "0.0.3"
sbi-spec = "0.0.8"
