[package]
name = "platform-specific"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.12"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
ns16550a = "0.4.0"

[features]
default = ["virt"]
virt = []
vf2 = []
2k1000 = []
