[package]
name = "rng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
hermit-sync = "0.1.6"

[features]
default = ["std"]
std = []
no_std = []
