[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hermit-sync = "0.1.6"
timing = { path = "../timing", default-features = false }
paging = { path = "../paging", default-features = false }
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
riscv = "0.12.1"
lock_api = "0.4.12"
bitflags = "2.6.0"

[features]
default = ["std"]
std = []
no_std = []
