[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hermit-sync = "0.1.6"
timing = { path = "../timing", default-features = false }
paging = { path = "../paging", default-features = false }
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }
riscv = "0.12"
platform-specific = { path = "../platform-specific" }
lock_api = "0.4.12"
bitflags = "2.6.0"
log = "0.4.22"
drivers = { path = "../drivers", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
