[package]
name = "threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks", default-features = false }
async-task = { version = "4.7.1", default-features = false }
hermit-sync = "0.1.6"

[features]
default = ["std"]
std = []
no_std = []
