[package]
name = "bakaos-simple-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-abstractions = { git = "https://github.com/caiyih/bakaos.git" }
platform-specific = { git = "https://github.com/caiyih/bakaos.git" }
paging = { git = "https://github.com/caiyih/bakaos.git" }
allocation = { git = "https://github.com/caiyih/bakaos.git" }
threading = { git = "https://github.com/caiyih/bakaos.git" }
address = { git = "https://github.com/caiyih/bakaos.git" }
abstractions = { git = "https://github.com/caiyih/bakaos.git" }
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }
