[package]
name = "bakaos-simple-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-abstractions = { path = "../../crates/platform-abstractions" }
platform-specific = { path = "../../crates/platform-specific" }
paging = { path = "../../crates/paging" }
allocation = { path = "../../crates/allocation" }
threading = { path = "../../crates/threading" }
address = { path = "../../crates/address" }
abstractions = { path = "../../crates/abstractions" }
global_heap = { path = "../../crates/global_heap" }
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }
