[package]
name = "allocation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
hermit-sync = "0.1.6"
constants = { path = "../constants", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
address = { path = "../address", default-features = false }
allocation-abstractions = { path = "../allocation-abstractions", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
