[package]
name = "constants"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
chrono = "0.4"
source-generation = { path = "../../source-generation" }
