[package]
name = "filesystem-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
hermit-sync = "0.1.6"
lock_api = "0.4.12"
log = "0.4.27"
downcast-rs = { version = "2.0", default-features = false }
timing = { path = "../timing", default-features = false }
path = { path = "../path", default-features = false }
constants = { path = "../constants", default-features = false }

[features]
default = ["no_std"]
allocation = []
std = []
no_std = []
