[package]
name = "kernel-abstractions"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hermit-sync = "0.1.6"
timing = { path = "../timing", default-features = false }
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }
mmu-abstractions = { path = "../mmu-abstractions", default-features = false }
allocation-abstractions =  { path = "../allocation-abstractions", default-features = false }
downcast-rs = { version = "2.0", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
