[package]
name = "linux-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities", default-features = false }
constants = { path = "../constants", default-features = false }
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
mmu-abstractions = { path = "../mmu-abstractions" }
allocation-abstractions = { path = "../allocation-abstractions", default-features = false }
filesystem-abstractions = { path = "../filesystem-abstractions", default-features = false }
memory-space-abstractions = { path = "../memory-space-abstractions", default-features = false }

bitflags = "2.9"
xmas-elf = "0.10"
log = "0.4.27"
hermit-sync = "0.1.6"

[target.'cfg(target_os = "none")'.dependencies]
platform-specific = { path = "../platform-specific", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []

