[package]
name = "memory-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hermit-sync = "0.1.6"
constants = { path = "../constants", default-features = false }
address = { path = "../address", default-features = false }
abstractions = { path = "../abstractions", default-features = false }
mmu-abstractions = { path = "../mmu-abstractions" }
allocation-abstractions = { path = "../allocation-abstractions", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
