[package]
name = "mmu-abstractions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
address = { path = "../address", default-features = false }
# downcast-rs = "2.0.1"

[features]
default = ["no_std"]
std = []
no_std = []
