[package]
name = "mmu-abstractions"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
address = { path = "../address", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
