[package]
name = "mmu-abstractions"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
downcast-rs = { version = "2.0", default-features = false, features = ["sync"] }
address = { path = "../address", default-features = false }

[features]
default = ["no_std"]
std = []
no_std = []
